fix theme align

--- a/components/Themes/Theme/Theme.component.less
+++ b/components/Themes/Theme/Theme.component.less
@@ -81,6 +81,7 @@
     @media @desktop {
       display: flex;
       margin: 0 auto 114px;
+      align-items: flex-start;
     }
   }
   &__description {
